# coding-agent-mcp

./: .env.sample  .gitignore  CLAUDE.md  README.md  claude_desktop_config_snippet.json  coding-router.plugin  config.example.yaml  config.yaml  package-lock.json  package.json  pyproject.toml
.github/workflows/: publish.yml
data/: coding_benchmarks.json
scripts/: fetch_benchmarks.py  session_start_hook.py
src/: bin.ts  config.ts  index.ts  types.ts
src/coding_agent/: __init__.py  __main__.py  config.py  leaderboard.py  quota.py  router.py  server.py
src/coding_agent/dispatchers/: __init__.py  base.py  claude_code.py  codex.py  cursor.py  gemini.py  openai_compatible.py  utils.py
src/dispatchers/: base.ts  claude-code.ts  codex.ts
src/dispatchers/shared/: rate-limit-headers.ts  subprocess.ts  windows-cmd.ts
src/mcp/: config-hot-reload.ts  dispatcher-factory.ts  server.ts  tools.ts
tests/: rate-limit-headers.test.ts  smoke_test.py  windows-cmd.test.ts
tests/dispatchers/: claude-code.test.ts  codex.test.ts
tests/mcp/: server.test.ts  tools.test.ts
